HelloUltraviolet/Fixtures/RejectedSource/Expressions/PipelineNotCallable/Expected.uv
//! Expected diagnostic metadata for the PipelineNotCallable rejected-source specimen.

expectedDiagnostic("E-SEM-2538", "rule.16.T-Pipeline-NotCallable-Err")
